# taiga

./: .gitmodules
.github/workflows/: release.yml
cmake/: TaigaConfig.cmake
src/: CMakeLists.txt
src/base/: chrono.cpp  rss.hpp  string.cpp  string.hpp  xml.cpp  xml.hpp
src/compat/: history.cpp  history.hpp  settings.cpp
src/gui/: CMakeLists.txt
src/gui/common/: anime_list_view.cpp  anime_list_view_base.cpp  anime_list_view_base.hpp  anime_list_view_cards.cpp
src/gui/history/: history_widget.cpp  history_widget.hpp
src/gui/list/: list_widget.cpp  list_widget.hpp
src/gui/main/: about_dialog.cpp  about_dialog.hpp  main_window.cpp  main_window.hpp  main_window.ui  navigation_widget.cpp  now_playing_widget.cpp  now_playing_widget.hpp
src/gui/media/: media_menu.cpp  media_menu.hpp
src/gui/models/: anime_list_model.cpp  anime_list_proxy_model.cpp  history_model.cpp  history_model.hpp  library_model.hpp
src/gui/settings/: settings_dialog.cpp
src/gui/utils/: format.cpp  format.hpp  painters.cpp
src/link/: discord.cpp
src/media/: anime_history.cpp  anime_history.hpp  anime_list_export.cpp  anime_list_export.hpp  anime_list_utils.cpp  anime_list_utils.hpp
src/resources/: CMakeLists.txt  deps.qrc
src/resources/styles/: dark.qss  main.qss
src/taiga/: application.cpp  orange.cpp  resource.h  resource.rc  session.cpp  settings.cpp  settings.h  settings.hpp  settings_keys.cpp  settings_keys.h  update.cpp
src/track/: episode.cpp  episode.hpp  media.cpp  media.hpp  play.cpp  play.hpp  recognition.cpp  recognition_cache.cpp  recognition_cache.hpp  recognition_normalize.cpp  scanner.cpp  scanner.hpp
src/ui/: ui.cpp
src/ui/dlg/: dlg_anime_list.cpp  dlg_main.cpp  dlg_main.h  dlg_main_controls.cpp  dlg_settings.cpp  dlg_settings_page.cpp
